force-app/main/default/objects/Field_Worker__c/Field_Worker__c.object-meta.xml
<CustomObject>
    <label>Field Worker</label>
    <nameField>
        <label>Field Worker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Workers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>