force-app/main/default/objects/Field_Worker__c/fields/Field_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Field_Knowledge__c</fullName>
    <label>Field Knowledge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>