force-app/main/default/objects/Field_Worker__c/fields/FieldWorkerID__c.field-meta.xml
<CustomField>
    <fullName>FieldWorkerID__c</fullName>
    <displayFormat>FWID-{0000}</displayFormat>
    <label>FieldWorkerID</label>
    <type>AutoNumber</type>
</CustomField>